--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           <option value="low">Less Priority</option>
         </select>
         <input type="date" id="deadline" />
-        <button id="add-task">Add Task</button>
+        <button id="add-task" onclick="displayFn()" type="button">Add Task</button>
       </div>
       <div class="task-list" id="task-list">
-
+        <h1 id="display">...</h1>
       </div>
-      <script src="logic.js"></script>
+      <script src="style.js"></script>
     </main>
   </body>
 </html>
