added min date to calendar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <option value="Middle">Middle Priority</option>
           <option value="Low">Less Priority</option>
         </select>
-        <input type="date" id="deadline" />
+        <input type="date" id="deadline" min=""  />
         <button id="add-task" onclick="add()" type="button">Add Task</button>
       </div>
       <div class="task-list" id="display">
