started with function to change div background colour

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <div class="task-form">
         <input type="text" id="task" placeholder="Enter task..." />
         <select id="priority">
-          <option value="Top">Top Priority</option>
+          <option value="Top" >Top Priority</option>
           <option value="Middle">Middle Priority</option>
           <option value="Low">Less Priority</option>
         </select>
-        <input type="date" id="deadline" min=""  />
-        <button id="add-task" onclick="add()" type="button">Add Task</button>
+        <input type="date" id="deadline"  />
+        <button id="add-task" onclick="add(), colourChange(), colourChangeTwo()" type="button">Add Task</button>
       </div>
       <div class="task-list" id="display">
         <!-- <h1 id="display">...</h1> -->
